Kubedemo/Shop-demo/Manifests/OldELB/shop2-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: shop2
  namespace: polyshop
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: polymerjs-shop
    environment: blue
